tripinsights-ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripinsights-ingress-web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripview
          servicePort: 8080
        path: /(/|$)(.*)
---
